--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,24 @@
 {
     "name": "superclasses/project",
     "type": "library",
-    "autoload": {
-        "psr-4": {
-            "Superclasses\\": "src/"
-        }
-    },
     "require-dev": {
         "phpunit/phpunit": "^10.0"
-    }
+    },
+    "autoload": {
+      "psr-4": {
+        "Superclasses\\": "src/"
+      }
+    },
+    "autoload-dev": {
+      "psr-4": {
+        "Tests\\": "tests/"
+      }
+    },
+    "scripts": {
+      "test": "phpunit",
+      "test:coverage": "php -d xdebug.mode=coverage -r \"require 'vendor/bin/phpunit';\" -- --configuration phpunit.xml --do-not-cache-result --coverage-clover build/logs/clover.xml --coverage-html build/coverage"
+    },
+  "require": {
+    "ext-ctype": "*"
+  }
 }
