--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "type": "library",
     "require": {
         "php": "^8.4",
-        "ext-ctype": "*"
+        "ext-ctype": "*",
+        "ext-mbstring": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0"
@@ -15,7 +16,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "Superclasses\\Tests\\": "tests/"
         }
     },
     "scripts": {
